--- a/index.html
+++ b/index.html
@@ -77,19 +77,19 @@
                             <li><i class="far fa-handshake"></i>&nbsp; <em>Established Since :</em> 1947</li>
                         </ul>
                     </div>
-                    <div class="col-11 mt-4 text-center fs-5">
-                        <div class="row">
-                            <div class="col-4 " style="border-right: 1px solid gray;">
-                                <p>4.4</p>
-                                <span>500+ Rating</span>
+                    <div class="col-12 mt-4 text-center h-25">
+                        <div class="row ">
+                            <div class="col-md-4" style="border-right: 1px solid gray;">
+                                <p class="text-white">4.4</p>
+                                <span class="text-white">500+ Rating</span>
                             </div>
-                            <div class="col-4 px-3" style="border-right: 1px solid gray;">
-                                <p>Today Time Schedule</p>
-                                <span>10:30 AM to 05:30 PM</span>
+                            <div class="col-md-4 px-3" style="border-right: 1px solid gray;">
+                                <p class="text-white">Today Time Schedule</p>
+                                <span class="text-white">10:30 AM to 05:30 PM</span>
                             </div>
-                            <div class="col-4">
-                                <p>300 $</p>
-                                <span>Cost for two</span>
+                            <div class="col-md-4">
+                                <p class="text-white">300 $</p>
+                                <span class="text-white">Cost for two</span>
                             </div>
                         </div>
                     </div>
@@ -111,9 +111,9 @@
             <div class="col-8 p-2">
                 <nav>
                     <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                        <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">About Us</button>
-                        <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Services</button>
-                        <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact" aria-selected="false">Packages</button>
+                        <button class="nav-link " id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-about" type="button" role="tab" aria-controls="nav-home" aria-selected="true">About Us</button>
+                        <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-service" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Services</button>
+                        <button class="nav-link active" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-package" type="button" role="tab" aria-controls="nav-contact" aria-selected="false">Packages</button>
                         <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-product" type="button" role="tab" aria-controls="nav-contact" aria-selected="false">Products</button>
                         <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-offers" type="button" role="tab" aria-controls="nav-contact" aria-selected="false">Offers</button>
                         <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-location" type="button" role="tab" aria-controls="nav-contact" aria-selected="false">Location</button>
@@ -122,7 +122,7 @@
                     </div>
                 </nav>
                 <div class="tab-content" id="nav-tabContent">
-                    <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
+                    <div class="PacBox tab-pane fade" id="nav-about" role="tabpanel" aria-labelledby="nav-home-tab">
 
                         <section id="About">
                             <div class="container-inner">
@@ -186,7 +186,7 @@
                         </section>
 
                     </div>
-                    <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
+                    <div class="PacBox tab-pane fade" id="nav-service" role="tabpanel" aria-labelledby="nav-profile-tab">
                         <section id="ServicePage">
                             <h2 class="text-center py-5">Service Menu</h3>
 
@@ -304,8 +304,66 @@
                         </section>
 
                     </div>
-                    <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">...</div>
-                    <div class="tab-pane fade" id="nav-product" role="tabpanel" aria-labelledby="nav-contact-tab">
+                    <div class="PacBox tab-pane fade show active " id="nav-package" role="tabpanel" aria-labelledby="nav-contact-tab">
+
+                        <section id="package">
+                            <div class=" row w-100 border-bottom  py-3 border-secondary m-auto">
+                                <div class="col-9">
+                                    <h3 class="mb-2">Navratri Special Offer</h3>
+                                    <h4 class="mt-2">Offer : Haicut + Hair Conditioning +Hair Spa</h4>
+
+                                    <ul class="list-unstyled my-2">
+                                        <li>Lorem, ipsum dolor.</li>
+                                        <li>Amet, error culpa?</li>
+                                        <li>Molestiae, facilis laboriosam.</li>
+                                    </ul>
+
+                                    <h6 class="mt-2">Valid Till : 20/10/2021</h6>
+                                </div>
+                                <div class="col-3 ">
+                                    <div class="row">
+                                        <div class="col-11 mt-4 text-end">
+                                            <span><s> ₹ 550</s> &nbsp;</span>
+                                            <p class="d-inline-block fs-4">₹ 360</p>
+                                            <p>Inc. of all taxes</p>
+                                        </div>
+                                        <div class="col-11 text-end mt-5">
+                                            <button class="btn btn-primary px-5">Add +</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class=" row w-100 border-bottom  py-3 border-secondary m-auto">
+                                <div class="col-9">
+                                    <h3 class="mb-2">Navratri Special Offer</h3>
+                                    <h4 class="mt-2">Offer : Haicut + Hair Conditioning +Hair Spa</h4>
+
+                                    <ul class="list-unstyled my-2">
+                                        <li>Lorem, ipsum dolor.</li>
+                                        <li>Amet, error culpa?</li>
+                                        <li>Molestiae, facilis laboriosam.</li>
+                                    </ul>
+
+                                    <h6 class="mt-2">Valid Till : 20/10/2021</h6>
+                                </div>
+                                <div class="col-3 ">
+                                    <div class="row">
+                                        <div class="col-11 mt-4 text-end">
+                                            <span><s> ₹ 550</s> &nbsp;</span>
+                                            <p class="d-inline-block fs-4">₹ 360</p>
+                                            <p>Inc. of all taxes</p>
+                                        </div>
+                                        <div class="col-11 text-end mt-5">
+                                            <button class="btn btn-primary px-5">Add +</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </section>
+
+                    </div>
+                    <div class="PacBox tab-pane fade" id="nav-product" role="tabpanel" aria-labelledby="nav-contact-tab">
 
                         <section id="Products">
                             <div class="row p-3 mb-5 w-100 m-auto">
@@ -391,7 +449,7 @@
                         </section>
 
                     </div>
-                    <div class="tab-pane fade" id="nav-offers" role="tabpanel" aria-labelledby="nav-contact-tab">
+                    <div class="PacBox tab-pane fade" id="nav-offers" role="tabpanel" aria-labelledby="nav-contact-tab">
 
                         <section id="Gallery">
                             <div class="row w-75 m-auto ">
@@ -415,7 +473,7 @@
                             </div>
                         </section>
                     </div>
-                    <div class="tab-pane fade" id="nav-location" role="tabpanel" aria-labelledby="nav-contact-tab">
+                    <div class="PacBox tab-pane fade" id="nav-location" role="tabpanel" aria-labelledby="nav-contact-tab">
                         <div class="col-8 p-2 m-auto h-50">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14765.123346957746!2d73.17855767674519!3d22.305216265134536!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395fcf52f33b0c3f%3A0x60dfa11a6e099991!2sSayajiganj%2C%20Vadodara%2C%20Gujarat!5e0!3m2!1sen!2sin!4v1633439562174!5m2!1sen!2sin"
                                 width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
@@ -427,7 +485,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="tab-pane fade" id="nav-review" role="tabpanel" aria-labelledby="nav-contact-tab">
+                    <div class="PacBox tab-pane fade" id="nav-review" role="tabpanel" aria-labelledby="nav-contact-tab">
 
 
                         <div class="card w-50 mt-4 text-center m-auto">
